--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html>
 
    <head>
-     <h2>image src="download.png" alt="Banner" width="900" height="300"<h2>
+      <head>
+     <image src="download.png" alt="Banner" width="900" height="300"<h2>
    </head>
        
  </html>
