--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
    <head>
       <head>
-     <image src="download.png" alt="Banner" width="900" height="300"<h2>
+     <image src="download.png" alt="Banner" width="900" height="300">
    </head>
        
  </html>
