--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1><b>ENG0018 Computer Laboratory 2025/26</b><h1>
            <h2>Student URN: 6924601</h2>
       <hr>
-           <h2 style=”font-family:calibri”><b>Conference paper: Bridge Deck Repairs</b></h2>
+           <h2 style=”font-family:calibri”><b>Conference paper: The evolution of Clocks, from Shadows to Satellites</b></h2>
       <hr>
            <!style for tables>
              <style>
