--- a/index.html
+++ b/index.html
@@ -47,7 +47,45 @@
        .mySlides {display:none;}
        </style>
             <body style="background-color:#FFFFFF;margin-left:50px;">
-            <hr><h3 id="Abstract">Abstract</h3></p>
+    <table>
+      <tr>
+        <th><h3>Table of contents</h3></th>
+      </tr>
+      <tr>
+        <td><a href="#Abstract">Abstract</td>
+      </tr>
+       <tr>
+        <td><a href="#Introduction">Introduction</td>
+      </tr>
+       <tr>
+        <td><a href="#Sundials">Sundials</td>
+      </tr>
+       <tr>
+        <td><a href="#Weight / Gravity driven mechanical clocks">Weight / Gravity driven mechanical clocks</td>
+      </tr>
+       <tr>
+        <td><a href="#Atomic and GPS clocks">Atomic and GPS clocks</td>
+      <tr>
+      <tr>
+        <td><a href="#Clock fusion">Clock fusion</td>
+       <tr>
+      <tr>
+        <td><a href="#Clock fusion">Clock fusion</td>
+      </tr>
+       <tr>
+        <td><a href="#Conclusion">Conclusion</td>
+      </tr>
+      <tr>
+        <td><a href="#References">References</td>
+      </tr>
+    </table>
+    <video src="What are the effects of the front wing.mp4" width="800" height="450" controls>
+    </video>
+  <hr>
+    <h3 id="Abstract">Abstract</h3>
+    
+      <p>
+
             <p class"ex1">
             <pre>
                This paper presents a novel adaptive active learning strategy. The most accurate classification model from a heterogeneous
