--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
 
           www.sciencemuseum.org.uk. (n.d.). Telling the time with the Sun | Science Museum. [online] Available at:
           <a 
-             href=https://www.sciencemuseum.org.uk/objects-and-stories/telling-time-sun> </a>
+             href=https://www.sciencemuseum.org.uk/objects-and-stories/telling-time-sun> https://www.sciencemuseum.org.uk/objects-and-stories/telling-time-sun </a>
                                                                                                                                                                                                      
          The Editors of Encyclopaedia Britannica (2019). sundial | Definition, History, Types, & Facts. In: Encyclopædia Britannica. [online] Available at:
          <a 
-            href=https://www.britannica.com/technology/sundial> </a>
+            href=https://www.britannica.com/technology/sundial> https://www.britannica.com/technology/sundial </a>
 
                                                                                                                                                
 
