--- a/index.html
+++ b/index.html
@@ -106,13 +106,9 @@
          A significant limitation these devices is that being measured “seasonal hours” and flying that the duration of an hour varies throughout the equations of daylight.
          Additionally they are fundamentally restricted by the dependence on sunlight rendering them ineffective at night ordering overcast conditions.
 
-          www.sciencemuseum.org.uk. (n.d.). Telling the time with the Sun | Science Museum. [online] Available at:
-          <a 
-             href=https://www.sciencemuseum.org.uk/objects-and-stories/telling-time-sun> https://www.sciencemuseum.org.uk/objects-and-stories/telling-time-sun </a>
+          www.sciencemuseum.org.uk. (n.d.). Telling the time with the Sun | Science Museum. [online] Available at:<a href=https://www.sciencemuseum.org.uk/objects-and-stories/telling-time-sun>https://www.sciencemuseum.org.uk/objects-and-stories/telling-time-sun</a>
                                                                                                                                                                                                      
-         The Editors of Encyclopaedia Britannica (2019). sundial | Definition, History, Types, & Facts. In: Encyclopædia Britannica. [online] Available at:
-         <a 
-            href=https://www.britannica.com/technology/sundial> https://www.britannica.com/technology/sundial </a>
+         The Editors of Encyclopaedia Britannica (2019). sundial | Definition, History, Types, & Facts. In: Encyclopædia Britannica. [online] Available at:<a href=https://www.britannica.com/technology/sundial>https://www.britannica.com/technology/sundial</a>
 
                                                                                                                                                
 
