--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
        <link rel="stylesheet"href="https://www.w3schools.com/w3css/4/w3.css">
        <style>
        .mySlides {display:none;}
+            a:link,
+        a:visited {
+            color: blue;
+        }
        </style>
             <body style="background-color:#FFFFFF;margin-left:50px;">
     <table>
