--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
       <h3 id="Clock fusion">Clock fusion</h3>
 
       <p>
-         Morden “clock fusion” refers to the integration multiple times sources such as cesium atomic clock GNSS-discipline oscillators and network-based feeds.
-         They use hardware and algorithmic frameworks enhance accuracy performance, 
+         Modern “clock fusion” refers to the integration of multiple time sources such as a Caesium atomic clock, GNSS-discipline oscillators, and network-based feeds.
+         They use hardware and algorithmic frameworks to enhance accuracy performance, 
          creating a resilience against signal loss or manipulation.
          Rather than relying on a single best source, 
-         fusion clocks operate by continuously comparing different inputs and weighing their reliability seriously changing the difference between output stable time throughout.
-         Furthermore clock fusion mitigates various vulnerabilities by incorporating secure local oscillators, checking sources, and confirming signal integrity before distribution,
-         this approach ensures continuity of precise time even when external reference degrade, fail, marking a strategic shift from unreliable single source clocks to distributed verified resilient timekeeping. <br> <br> Citations:
+         Fusion clocks operate by continuously comparing different inputs and weighing their reliability, switching their source to the most accurate, therefore outputting a stable time throughout.
+         Furthermore, clock fusion mitigates various vulnerabilities by incorporating secure local oscillators, checking sources, and confirming signal integrity before distribution. This
+         approach ensures continuity of precise time even when external reference degrades or fails, marking a strategic shift from unreliable single source clocks to distributed, verified resilient timekeeping. <br> <br> Citations:
 
          <br>‌Anand, D.M. (2021). Design and Capabilities of the Assistive Clock Fusion Testbed. [online] doi:<a href=https://doi.org/10.6028/nist.tn.2138>https://doi.org/10.6028/nist.tn.2138</a>
  ‌        <br>Alexander, E. (2025). Timing Resilience from the Ground Up. [online] Mwrf.com. Available at:<a href=https://www.mwrf.com/technologies/communications/article/55317093/microchip-technology-timing-resilience-from-the-ground-up>https://www.mwrf.com/technologies/communications/article/55317093/microchip-technology-timing-resilience-from-the-ground-up</a>
