--- a/index.html
+++ b/index.html
@@ -116,7 +116,14 @@
           <br> www.sciencemuseum.org.uk. (n.d.). Telling the time with the Sun | Science Museum. [online] Available at:<a href=https://www.sciencemuseum.org.uk/objects-and-stories/telling-time-sun>https://www.sciencemuseum.org.uk/objects-and-stories/telling-time-sun</a>                                                                                                                                                                                          
          <br> The Editors of Encyclopaedia Britannica (2019). sundial | Definition, History, Types, & Facts. In: Encyclopædia Britannica. [online] Available at:<a href=https://www.britannica.com/technology/sundial>https://www.britannica.com/technology/sundial</a>
               </p>
-               
+         <img src="sun dial.jpg" alt="Banner" width="408" height="244">
+              <p class "ex1">
+         <pre>
+        Figure 1: Sun Dial
+        </pre>
+  </p>
+
+                          
       <h3 id="Weight / Gravity driven mechanical clocks">Weight / Gravity driven mechanical clocks</h3>
    
        <p>
