--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
          <img src="sun dial.jpg" alt="Banner" width="408" height="244">
               <p class "ex1">
          <p>
-        Figure 1: Sun Dial
+        Figure 1: Sundial
         </p>
 
                           
@@ -137,6 +137,17 @@
           <br> Betts, J. (n.d.). Clock | measurement device. [online] Encyclopedia Britannica. Available at:<a href=https://www.britannica.com/technology/clock>https://www.britannica.com/technology/clock</a>
           <br>The (1998). Pendulum | Definition, Formula, & Types. [online] Encyclopedia Britannica. Available at:<a href=https://www.britannica.com/science/pendulum>https://www.britannica.com/science/pendulum</a>
               </p>
+               
+               <img src="pendulumdyagram.png" alt="Banner" width="408" height="244">
+              <p class "ex1">
+         <p>
+        Figure 2: Diagram of the internals of a pendulum clock
+        </p>
+                         <img src="Pendulum.jpg" alt="Banner" width="408" height="244">
+              <p class "ex1">
+         <p>
+        Figure 3: pendulum clock
+
 
       <h3 id="Marine chronometers and stabiliser">Marine chronometers and stabiliser</h3>
 
