--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         a:visited {
             color: blue;
         }
+          isplay: inline-block;
+      vertical-align: middle; 
+      margin-right: 10px; 
        </style>
             <body style="background-color:#FFFFFF;margin-left:50px;">
     <table>
@@ -137,13 +140,14 @@
           <br> Betts, J. (n.d.). Clock | measurement device. [online] Encyclopedia Britannica. Available at:<a href=https://www.britannica.com/technology/clock>https://www.britannica.com/technology/clock</a>
           <br>The (1998). Pendulum | Definition, Formula, & Types. [online] Encyclopedia Britannica. Available at:<a href=https://www.britannica.com/science/pendulum>https://www.britannica.com/science/pendulum</a>
               </p>
-               
+               <div class="img-row">
                <img src="pendulumdyagram.png" alt="Banner" width="215" height="435">
+               <img src="Pendulum.jpg" alt="Banner" width="215" height="400">
               <p class "ex1">
          <p>
         Figure 2: Diagram of the internals of a pendulum clock
         </p>
-                         <img src="Pendulum.jpg" alt="Banner" width="408" height="244">
+                        
               <p class "ex1">
          <p>
         Figure 3: pendulum clock
