--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                <img src="pendulumdyagram.png" alt="Banner" width="215" height="435">
                <img src="Pendulum.jpg" alt="Banner" width="215" height="400">
               <p class "ex1">
+              </div>
          <p>
         Figure 2: Diagram of the internals of a pendulum clock
         </p>
