--- a/index.html
+++ b/index.html
@@ -133,11 +133,13 @@
           <br> www.sciencemuseum.org.uk. (n.d.). Telling the time with the Sun | Science Museum. [online] Available at:<a href=https://www.sciencemuseum.org.uk/objects-and-stories/telling-time-sun>https://www.sciencemuseum.org.uk/objects-and-stories/telling-time-sun</a>                                                                                                                                                                                          
          <br> The Editors of Encyclopaedia Britannica (2019). sundial | Definition, History, Types, & Facts. In: Encyclopædia Britannica. [online] Available at:<a href=https://www.britannica.com/technology/sundial>https://www.britannica.com/technology/sundial</a>
               </p>
+         <div class="img-row">
+         <figure>
          <img src="sun dial.jpg" alt="Banner" width="500" height="400">
-              <p class "ex1">
-         <p>
-        Figure 1: Sundial
-        </p>
+         <figcaption>Figure 1: Sundial</figcaption>
+    </figure>
+         </div>
+      
 
                           
       <h3 id="Weight / Gravity driven mechanical clocks">Weight / Gravity driven mechanical clocks</h3>
@@ -165,7 +167,6 @@
                <img src="Pendulum.jpg" alt="Banner" width="215" height="415">
                <figcaption>Figure 3: pendulum clock</figcaption>
     </figure>
-              <p class "ex1">
               </div>
 
 
