--- a/index.html
+++ b/index.html
@@ -183,6 +183,12 @@
          <br>Betts, J. (2019). Chronometer | timekeeping device. In: Encyclopædia Britannica. [online] Available at:<a href=https://www.britannica.com/technology/chronometer>https://www.britannica.com/technology/chronometer</a>
          <br>www.britannica.com. (n.d.). navigation - Longitude measurements | Britannica. [online] Available at:<a href=https://www.britannica.com/technology/navigation-technology/Longitude-measurements>https://www.britannica.com/technology/navigation-technology/Longitude-measurements</a>
              </p>
+                 <div class="img-row">
+         <figure>
+         <img src="marinechronometer.png" alt="Banner" width="310" height="400">
+         <figcaption>Figure 1: chronometer with stabilizers</figcaption>
+    </figure>
+         </div>
 
       <h3 id="Clock fusion">Clock fusion</h3>
 
