--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@
          <img src="marinechronometer.png" alt="Banner" width="310" height="400">
          <figcaption>Figure 1: chronometer with stabilizers</figcaption>
     </figure>
+         <figure>
+         <img src="Harrison's_Chronometer.jpg" alt="Banner" width="600" height="400">
+         <figcaption>Figure 1: John Harrison’s marine chronometer</figcaption>
+    </figure>
          </div>
 
       <h3 id="Clock fusion">Clock fusion</h3>
