--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
                  <div class="img-row">
          <figure>
          <img src="marinechronometer.png" alt="Banner" width="310" height="400">
-         <figcaption>Figure 1: chronometer with stabilizers</figcaption>
+         <figcaption>Figure 4: chronometer with stabilizers</figcaption>
     </figure>
          <figure>
          <img src="Harrison's_Chronometer.jpg" alt="Banner" width="600" height="400">
-         <figcaption>Figure 1: John Harrison’s marine chronometer</figcaption>
+         <figcaption>Figure 5: John Harrison’s marine chronometer</figcaption>
     </figure>
          </div>
 
@@ -208,6 +208,12 @@
          <br>‌Anand, D.M. (2021). Design and Capabilities of the Assistive Clock Fusion Testbed. [online] doi:<a href=https://doi.org/10.6028/nist.tn.2138>https://doi.org/10.6028/nist.tn.2138</a>
  ‌        <br>Alexander, E. (2025). Timing Resilience from the Ground Up. [online] Mwrf.com. Available at:<a href=https://www.mwrf.com/technologies/communications/article/55317093/microchip-technology-timing-resilience-from-the-ground-up>https://www.mwrf.com/technologies/communications/article/55317093/microchip-technology-timing-resilience-from-the-ground-up</a>
               </p>
+              <div class="img-row">
+         <figure>
+         <img src="AtomicClock.jpg" alt="Banner" width="1300" height="400">
+         <figcaption>Figure 6: Caesium atomic clock</figcaption>
+    </figure>
+         </div>
                
       <h3 id="Atomic and GPS clocks">Atomic and GPS clocks</h3>
 
@@ -219,6 +225,12 @@
          <br>NIST’s Cesium Fountain Atomic Clocks. (2009). NIST. [online] Available at:<a href=https://www.nist.gov/pml/time-and-frequency-division/time-realization/cesium-fountain-atomic-clocks>https://www.nist.gov/pml/time-and-frequency-division/time-realization/cesium-fountain-atomic-clocks</a>
          <br>Ashby, N. (2003). Relativity in the Global Positioning System. Living Reviews in Relativity, [online] 6(1). doi:<a href=https://doi.org/10.12942/lrr-2003-1>https://doi.org/10.12942/lrr-2003-1</a>
              </p>
+         <div class="img-row">
+         <figure>
+         <img src="Relativetime.png" alt="Banner" width="620" height="400">
+         <figcaption>Figure 7: Diagram illustrating how time differs with distance</figcaption>
+    </figure>
+         </div>
                
       <h3 id="Conclusion">Conclusion</h3>
 
