--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
              </p>
          <div class="img-row">
          <figure>
-         <img src="Relativetime.png" alt="Banner" width="620" height="400">
+         <img src="Relativetime.svg" alt="Banner" width="620" height="400">
          <figcaption>Figure 7: Diagram illustrating how time differs with distance</figcaption>
     </figure>
          </div>
