--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
 </button>
 <script>
     async function getLastUpdatedTime() {
-        const username = 'Vasco-s06';
-        const repo = 'FY6901444';
+        const username = 'Artthur_T06';
+        const repo = 'FY6924601';
        
         const url = https://api.github.com/repos/${username}/${repo}/commits;
         try {
