--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         margin-top: 8px; 
 
        </style>
+           <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
             <body style="background-color:#FFFFFF;margin-left:50px;">
     <table>
       <tr>
@@ -97,6 +98,17 @@
         <td><a href="#Conclusion">Conclusion</td>
       </tr>
       <tr>
+         <hr>
+<h3>Word Count (Introduction → Conclusion)</h3>
+<p id="wordcount" style="font-weight:bold;"></p>
+
+<h3>Last Modified Time (GitHub)</h3>
+<p id="lastModified" style="font-weight:bold;"></p>
+<button onclick="verifyLastModified()">Verify Last Modified Time</button>
+
+<h3>Timekeeping Accuracy Chart</h3>
+<div id="chart_div" style="width:900px;height:500px;"></div>
+<hr>
         <td><a href="#References">References</td>
       </tr>
     </table>
