--- a/index.html
+++ b/index.html
@@ -323,63 +323,99 @@
       });
   }
 
-  // ---- WORD COUNTER (Abstract → Conclusion) ----
-  function countWords(text) {
-      return text.trim().split(/\s+/).filter(w => w.length > 0).length;
-  }
+ <h3>Last Modified Time (GitHub)</h3>
+<div id="last-updated">Loading last update time...</div>
 
-  function updateWordCount() {
-      // IDs that actually exist in your HTML
-      const sectionIds = [
-          'Abstract',
-          'introText',
-          'Sundials',
-          'WeightGravitydrivenmechanicalclocks',
-          'Marinechronometersandstabiliser',
-          'Clockfusion',
-          'AtomicandGPSclocks',
-          'Conclusion'
-      ];
+<button onclick="verifyLastUpdatedTime()" 
+        style="display:block; margin:10px 0; padding:8px 16px;">
+    Verify Last Modified Time
+</button>
 
-      let total = 0;
+<!-- This is the line that will show your word count -->
+<h3>Word Count (Abstract → Conclusion)</h3>
+<p id="wordcount" style="font-weight:bold;"></p>
+<hr>
 
-      sectionIds.forEach(id => {
-          const el = document.getElementById(id);
-          if (el) {
-              total += countWords(el.textContent);
-          }
-      });
+<script>
+    // ===== LAST UPDATED FROM GITHUB =====
+    async function getLastUpdatedTime() {
+        const username = 'FEPSFY6924601';
+        const repo = 'FY6924601';
 
-      document.getElementById("wordcount").textContent =
-          "Total Word Count (Abstract → Conclusion): " + total;
-  }
+        const url = https://api.github.com/repos/${username}/${repo}/commits;
+        try {
+            const response = await fetch(url, {
+                method: 'GET',
+                headers: {
+                    'Accept': 'application/vnd.github.v3+json',
+                }
+            });
 
-  // Run after the page has loaded
-  document.addEventListener('DOMContentLoaded', () => {
-      updateWordCount();
-      getLastUpdatedTime();
-  });
+            if (!response.ok) {
+                throw new Error(Error fetching data: ${response.status} - ${response.statusText});
+            }
 
-  // ---- LAST MODIFIED (GitHub) ----
-  async function getLastUpdatedTime() {
-      try {
-          const response = await fetch("https://api.github.com/repos/FEPSFY6924601/FY6924601/commits");
-          const data = await response.json();
-          const lastUpdate = data[0].commit.author.date;
+            const commits = await response.json();
 
-          document.getElementById("lastModified").innerText =
-              "Last Modified (from GitHub API): " + new Date(lastUpdate).toLocaleString();
-      } catch (e) {
-          console.error(e);
-          document.getElementById("lastModified").innerText =
-              "Could not fetch last modified time.";
-      }
-  }
+            if (commits && commits.length > 0) {
+                const lastCommitDate = new Date(commits[0].commit.committer.date);
+                document.getElementById('last-updated').innerText =
+                    Last Modified Time: ${lastCommitDate.toLocaleString()};
+            } else {
+                document.getElementById('last-updated').innerText =
+                    'No commits found in the repository.';
+            }
+        } catch (error) {
+            console.error('Error fetching the last updated time:', error);
+            document.getElementById('last-updated').innerText =
+                'Error fetching update time. Please check the repository details.';
+        }
+    }
 
-  function verifyLastModified() {
-      getLastUpdatedTime();
-  }
-</script>
+    // Button to re-check the time
+    async function verifyLastUpdatedTime() {
+        document.getElementById('last-updated').innerText = 'Verifying...';
+        await getLastUpdatedTime();
+        alert("Last modified time has been successfully verified from GitHub API.");
+    }
+
+    // ===== WORD COUNT (ABSTRACT → CONCLUSION) =====
+    // Count words in a given element by ID
+    function displayWordCount(sectionId) {
+        const el = document.getElementById(sectionId);
+        if (!el) return 0;                  // if ID not found, skip safely
+        const text = el.textContent || "";  // get the text
+        const words = text.trim().split(/\s+/);
+        return words.filter(w => w.length > 0).length;
+    }
+
+    // Sum all relevant sections and show total
+    function displayTotalWordCount() {
+        const sectionIds = [
+            'Abstract',
+            'introText',
+            'Sundials',
+            'WeightGravitydrivenmechanicalclocks',
+            'Marinechronometersandstabiliser',
+            'Clockfusion',
+            'AtomicandGPSclocks',
+            'Conclusion'
+        ];
+
+        let total = 0;
+        sectionIds.forEach(id => {
+            total += displayWordCount(id);
+        });
+
+        document.getElementById("wordcount").innerText =
+            Total Word Count (Abstract → Conclusion): ${total};
+    }
+
+    // ===== RUN BOTH ON PAGE LOAD =====
+    window.onload = function () {
+        getLastUpdatedTime();      // GitHub last commit time
+        displayTotalWordCount();   // Word count Abstract → Conclusion
+    };
 
             </body>
         </html>
