--- a/index.html
+++ b/index.html
@@ -336,7 +336,6 @@
 <p id="wordcount" style="font-weight:bold;"></p>
 <hr>
 
-<script>
     // ===== LAST UPDATED FROM GITHUB =====
     async function getLastUpdatedTime() {
         const username = 'FEPSFY6924601';
@@ -416,6 +415,9 @@
         getLastUpdatedTime();      // GitHub last commit time
         displayTotalWordCount();   // Word count Abstract → Conclusion
     };
+
+</script>
+
 
             </body>
         </html>
