--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ t<!DOCTYPE html>
          control of storage energy variations in motion, and temperature, to signal integrity, and relativistic drift. These innovations have transformed timekeeping from a solely local observation into a globally synchronised infrastructure.
          </p>
                
-
+      <h3 id="References">References</h3>
       <p>
          
          <br> www.sciencemuseum.org.uk. (n.d.). Telling the time with the Sun | Science Museum. [online] Available at:<a href=https://www.sciencemuseum.org.uk/objects-and-stories/telling-time-sun>https://www.sciencemuseum.org.uk/objects-and-stories/telling-time-sun</a>                                                                                                                                                                                          
