--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ t<!DOCTYPE html>
          <br>All images are under creative common licence.
              </p>  
 
-<!-- Last commit time display -->
+    <!-- Last commit time display -->
 <div id="last-updated">Loading last update time...</div>
 <!-- Verify Button -->
 <button onclick="verifyLastUpdatedTime()" style="display: block; margin: 10px auto; padding: 8px 16px;">
@@ -267,10 +267,9 @@ t<!DOCTYPE html>
 <script>
     async function getLastUpdatedTime() {
         const username = 'FEPSFY6924601';
-        const repo = 'FY6924601
-';
+        const repo = 'FY6924601';
        
-        const url = https://api.github.com/repos/${username}/${repo}/commits;
+        const url = `https://api.github.com/repos/${username}/${repo}/commits`;
         try {
             const response = await fetch(url, {
                 method: 'GET',
@@ -279,14 +278,14 @@ t<!DOCTYPE html>
                 }
             });
             if (!response.ok) {
-                throw new Error(Error fetching data: ${response.status} - ${response.statusText});
+                throw new Error(`Error fetching data: ${response.status} - ${response.statusText}`);
             }
             const commits = await response.json();
             if (commits && commits.length > 0) {
                 const lastCommitDate = new Date(commits[0].commit.committer.date);
                
                 // Displaying the time on load
-                document.getElementById('last-updated').innerText = Last Modified Time: ${lastCommitDate.toLocaleString()};
+                document.getElementById('last-updated').innerText = `Last Modified Time: ${lastCommitDate.toLocaleString()}`;
             } else {
                 document.getElementById('last-updated').innerText = 'No commits found in the repository.';
             }
@@ -304,6 +303,11 @@ t<!DOCTYPE html>
     // Initial load to display the time on page load
     window.onload = getLastUpdatedTime;
 </script>
+
+
+ <!-- //////////////////////////////////////////////////////////////////////////////// -->
+  <!-- ////////////////////////////// Word count function ////////////////////////////// -->
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
 <!-- Placeholder for total word count -->
 <p id="totalWordCount"></p>
 <hr>
@@ -322,22 +326,15 @@ t<!DOCTYPE html>
   // Function to calculate and display total word count from selected sections
   function displayTotalWordCount() {
     // Calculate word count for each section and accumulate the total
-   const AbstractCount = displayWordCount("Abstract_InText");
-   const introductionCount = displayWordCount("introduction_InText");
-   const SundialsCount = displayWordCount("Sundials_InText");
-   const WeightGravitydrivenmechanicalclocksCount = displayWordCount("WeightGravitydrivenmechanicalclocks_InText");
-   const MarinechronometersandstabiliserCount = displayWordCount("Marinechronometersandstabiliser_InText");
-   const ClockfusionCount = displayWordCount("Clockfusion_InText");
-   const AtomicandGPSclocksCount = displayWordCount("AtomicandGPSclocks_InText");
-   const ConclusionCount = displayWordCount("Conclusion_InText");
+    const IntroductionCount = displayWordCount("Introduction_InText");
+    const AnalysisCount = displayWordCount("Analysis_InText");
     // Calculate the sum of all selected sections
-    const totalWordCount = AbstractCount + introductionCount + SundialsCount + WeightGravitydrivenmechanicalclocksCount + MarinechronometersandstabiliserCount + ClockfusionCount + AtomicandGPSclocksCount + ConclusionCount;
+    const totalWordCount = IntroductionCount + AnalysisCount;
     // Display the total word count
-    document.getElementById("totalWordCount").innerText = Total word count: ${totalWordCount};
+    document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount}`;
   }
   // Run the function for specific sections and display total count when the page loads
   window.onload = displayTotalWordCount;
-   < wordcount_InText>Total word count:
 </script>
             </body>
         </html>
