--- a/index.html
+++ b/index.html
@@ -326,10 +326,16 @@ t<!DOCTYPE html>
   // Function to calculate and display total word count from selected sections
   function displayTotalWordCount() {
     // Calculate word count for each section and accumulate the total
-    const IntroductionCount = displayWordCount("Introduction_InText");
-    const AnalysisCount = displayWordCount("Analysis_InText");
+   const AbstractCount = displayWordCount("Abstract_InText");
+   const introductionCount = displayWordCount("introduction_InText");
+   const SundialsCount = displayWordCount("Sundials_InText");
+   const WeightGravitydrivenmechanicalclocksCount = displayWordCount("WeightGravitydrivenmechanicalclocks_InText");
+   const MarinechronometersandstabiliserCount = displayWordCount("Marinechronometersandstabiliser_InText");
+   const ClockfusionCount = displayWordCount("Clockfusion_InText");
+   const AtomicandGPSclocksCount = displayWordCount("AtomicandGPSclocks_InText");
+   const ConclusionCount = displayWordCount("Conclusion_InText");
     // Calculate the sum of all selected sections
-    const totalWordCount = IntroductionCount + AnalysisCount;
+    const totalWordCount = AbstractCount + introductionCount + SundialsCount + WeightGravitydrivenmechanicalclocksCount + MarinechronometersandstabiliserCount + ClockfusionCount + AtomicandGPSclocksCount + ConclusionCount;
     // Display the total word count
     document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount}`;
   }
