--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@ t<!DOCTYPE html>
       <h3 id="WeightGravitydrivenmechanicalclocks">Weight / Gravity driven mechanical clocks</h3>
    
        <p id="WeightGravitydrivenmechanicalclocks_InText">
-          Gravity and weight driven mechanical clocks created in Medieval Europe. 
-          They are among the earliest autonomous devices for timekeeping independent from celestial observations,
-          thereby making a significant technological advancement in time measurement. The earliest tower clocks for documented between the 13th and 14th centuries,
+          Gravity and weight driven Clocks
+          are the earliest devices for timekeeping independent from celestial observations,
+          thereby making a significant technological advancement. The earliest tower clocks for documented between the 13th and 14th centuries,
           they utilised suspended weights that supplied a continuous source of power to gear trains regulated by the verge-and-foliot escapement. This mechanism-controlled energy release in discrete periodic “ticks”,
           enables continuous time measurement. Christiaan Huygens introduced the pendulum in 1656, which further improve the accuracy of timekeeping by using isochronous oscillations enabling daily error should be reduced from minutes to seconds.
           Escapements also played a significant raw by transforming gravity into control movement enabling better measurements of time. However, these clocks face challenges such as gear train friction, temperature fluctuations and sensitivity to movement,
