--- a/index.html
+++ b/index.html
@@ -348,13 +348,17 @@
   const words = text.match(/\b\w+\b/g);
 
 const  wordslength =  words.length ;
+const AbstractCount = displayWordCount("Abstract_InText");
+const ReferencesCount = displayWordCount("References_InText");
+const totalWordCount_new = wordslength - (AbstractCount + ReferencesCount)
+     
      // 000000000000000000000000
      
 
 
    // Display the total word count
     //document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount}`;
-    document.getElementById("totalWordCount").innerText = `Total word count: ${wordslength}`;
+    document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount_new}`;
   }
   // Run the function for specific sections and display total count when the page loads
   window.onload = displayTotalWordCount;
