--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 const  wordslength =  words.length ;
 const AbstractCount = displayWordCount("Abstract_InText");
 const ReferencesCount = displayWordCount("References_InText");
-const totalWordCount_new = wordslength - (AbstractCount + ReferencesCount)
+const totalWordCountNew = wordslength - (AbstractCount + ReferencesCount)
      
      // 000000000000000000000000
      
@@ -358,7 +358,7 @@ const totalWordCount_new = wordslength - (AbstractCount + ReferencesCount)
 
    // Display the total word count
     //document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount}`;
-    document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount_new}`;
+    document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCountNew}`;
   }
   // Run the function for specific sections and display total count when the page loads
   window.onload = displayTotalWordCount;
