--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 const  wordslength =  words.length ;
 const AbstractCount = displayWordCount("Abstract_InText");
 const ReferencesCount = displayWordCount("References_InText");
-const totalWordCountNew = wordslength - (AbstractCount + ReferencesCount)
+const totalWordCountNew = wordslength  //- (AbstractCount + ReferencesCount)
      
      // 000000000000000000000000
      
